tests/NormalTests/paczka1/fuzzy1/83120403.err
Error in line 11: IVGIleC4r A469 90,8
Error in line 28: oIC S487 55,5
Error in line 29: oIC S764 65,4
